--- a/views/production/production.ejs
+++ b/views/production/production.ejs
@@ -63,6 +63,88 @@
     </div>
 </div>
 
+<div class="modal fade" id="emailProduction" tabindex="-1" role="dialog" data-backdrop="static" data-keyboard="false">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header custom-bg">
+                <h6 class="font-weight-bold h3 label-title">Production</h6>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="custom-modal-body">
+                <div class="card shadow">
+                    <div class="card-header text-center mt-3">
+                        <span class="h2 label-title">
+                            Receiver Information
+                        </span>
+                        
+                    </div>
+                    <hr class="sidebar-divider"/>
+                    <div class="px-3">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <label class="form-label" for="receiverName">Receiver Name:</label>
+                                <input autocomplete="off" id="receiverName" name="receiverName" type="text" class="form-control" placeholder="Recipient Name">        
+                            </div>
+                            
+                            <div class="col-md-6">
+                                <label class="form-label" for="receiverEmail">Receiver Email:</label>
+                                <input autocomplete="off" id="receiverEmail" name="receiverEmail" type="email" class="form-control" placeholder="Recipient Email Address">        
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mt-2 justify-content-end px-3">
+                        <div class="col-md-6 mb-1">
+                            <div class="input-group">
+                                <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select JO#" name="joNumber" id="joNumber" />
+                                <input autocomplete="off" type="hidden" id="joNumberID" name="joNumberID" />
+                                <div class="input-group-append">
+                                    <span class="input-group-text">JO Number</span>
+                                </div>
+                            </div>
+                            <div class="custom-dropdown cdw-tableoption" id="joNumberDropdown"></div>
+                        </div>
+                    </div>
+                    <hr class="sidebar-divider"/>
+                    <div class="card-body pt-0">
+                        <div class="row mt-2 justify-content-center">
+                            <div class="col-md-12">
+                                <div class="table-responsive border" style="height: 270px; overflow-y: auto;">
+                                    <table class="table table-bordered custom-mobile-table" id="emailComponents" width="100%" cellspacing="10">
+                                        <thead class="table-header">
+                                            <tr>
+                                                <th class = "text-left col-1">ID</th> 
+                                                <th class = "text-left col-2">Name</th> 
+                                                <th class = "text-left col-1">Quantity</th>    
+                                                <th class = "text-left col-1">Start Date</th> 
+                                                <th class = "text-left col-1">End Date</th> 
+                                                <th class = "text-left col-2">Supervisor</th> 
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td colspan="6">Select JO Number to display Production Data</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-outline-inventory" id="closeBtn" data-dismiss="modal">Close</button>
+                <button type="button" id="sendEmailProduction" class="btn btn-outline-inventory">
+                    <span id="btn-label-modal">Send</span>
+                    <span id="btnSpinner-modal" class="spinner-border spinner-border-sm d-none" role="status" aria-hidden="true"></span>
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- Begin PCreated by Content -->
 <div class="container-fluid">
     <!-- Content Row -->
@@ -78,15 +160,6 @@
                             <div class="col-12">
                                 <div class="row justify-content-end">
                                     <div class="col-md-3 mb-1">
-                                        <!-- <div class="customdropdown">
-                                            <div class="select selectproduct">
-                                                <span id="selectedproduct">Select Product</span>
-                                                <i class="fa fa-chevron-left"></i>
-                                            </div>
-                                            <input autocomplete="off" type="hidden" name="productid" id="productid">
-                                            <ul class="customdropdown-menu productlist">
-                                            </ul>
-                                        </div> -->
                                         <div class="input-group">
                                             <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Product" name="product" id="product" />
                                             <input autocomplete="off" type="hidden" id="productID" name="productID" />
@@ -182,24 +255,37 @@
         <div class="progress-bar" role="progressbar" style="width: 0%"
             aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
-    <div class="card-header py-3 header-bg">
+    <div class="card-header header-bg pb-0">
         <div class="row">
             <div class="col-md-4">
-                <div class="row mb-2">
+                <div class="row">
                     <button id="toggleButton" name="toggleButton" class=" ml-3 btn btn-circle btn-outline-inventory ">
-                        <i class="fas fa-chevron-right"></i>
+                        <i class="fas fa-plus"></i>
                     </button>
-                    <h6 class="mt-2 ml-3 font-weight-bold table-title">Production Data</h6>
-                </div>   
+                    <span class="h3 mt-2 ml-3 font-weight-bold label-title">
+                        Productions
+                    </span>
+                </div>
             </div>
-            <div class="col-md-6">
-                <div class="input-group">
-                    <input autocomplete="off" type="text" class="form-control bg-light small"
-                        placeholder="Search for..." aria-label="Search"
-                        aria-describedby="basic-addon2" id="search-input">
-                    <div class="input-group-append">
-                        <button class="btn sis-btn-color" type="button" id="search-button">
-                            <i class="fas fa-search fa-sm"></i>
+            <div class="col-md-8">
+                <div class="row justify-content-end">
+                    <div class="col-xl-6">
+                        <div class="row justify-content-center">
+                            <div class="input-group">
+                                <input autocomplete="off" type="text" class="form-control bg-light small"
+                                    placeholder="Search for..." aria-label="Search"
+                                    aria-describedby="basic-addon2" id="search-input">
+                                <div class="input-group-append">
+                                    <button class="btn sis-btn-color" type="button" id="search-button">
+                                        <i class="fas fa-search fa-sm"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-1 mb-1">
+                        <button class="btn btn-outline-inventory text-center" id="showEmailModal">
+                            <i class="far fa-paper-plane"></i>
                         </button>
                     </div>
                 </div>
