--- a/views/dashboard/dashboard.ejs
+++ b/views/dashboard/dashboard.ejs
@@ -56,7 +56,7 @@
                 <div class="tab-pane show active" id="sales-content" role="tabpanel"
                     aria-labelledby="grosssales-option">
                     <div class="row">
-                        <div class="col-xl-7">
+                        <div class="col-xl-8">
                             <div class="row">
                                 <div class="col">
                                     <div class="row">
@@ -108,6 +108,32 @@
                                                     <div class="row justify-content-center align-items-center">
                                                         <div class="col-auto">
                                                             <span class="h5" id="refunds-total">
+                                                            </span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md mb-2">
+                                            <div class="card shadow sales-details-height">
+                                                <div class="card-body">
+                                                    <div
+                                                        class="row justify-content-center h-25 no-gutters align-items-center">
+                                                        <div class="col-auto">
+                                                            <div class="icon-container">
+                                                                <i class="fas fa-times fa-2x refunds"></i>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div
+                                                        class="row justify-content-center h-50 align-items-center">
+                                                        <div class="col-auto">
+                                                            <div class="text-uppercase mb-1 h6">Order Cancelled</div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="row justify-content-center align-items-center">
+                                                        <div class="col-auto">
+                                                            <span class="h5" id="cancelled-total">
                                                             </span>
                                                         </div>
                                                     </div>
@@ -200,7 +226,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-5">
+                        <div class="col-xl-4">
                             <div class="card shadow">
                                 <div class="card-body sales-details-height">
                                     <div class="row justify-content-center">
@@ -436,7 +462,7 @@
                 <div class="tab-pane" id="others-content" role="tabpanel" aria-labelledby="others-option">
                     <div class="row">
                         <div class="col-md-3">
-                            <div class="card shadow" style="height: 700px;">
+                            <div class="card shadow " style="height: 700px;">
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-md text-center">
@@ -444,7 +470,7 @@
                                         </div>
                                     </div>
                                     <hr class="sidebar-divider">
-                                    <div class="" id="payment-sales-display">
+                                    <div class="scroll-cardbody-size-710" id="payment-sales-display">
                                     </div>
                                 </div>
                             </div>
