Revise Production, Procurement & Material Inventory
-disable button once already clicked
-added status REPLENISHMENT & ADJUSTMENT on production material history

--- a/views/materialcount/materialcountscripts.ejs
+++ b/views/materialcount/materialcountscripts.ejs
@@ -61,6 +61,7 @@
                     url: '/materialcount/save',
                     data: {
                         materialdata: materialdata,
+                        status: 'ADJUSTMENT',
                     },
                     success: function (result) {
                         if (result.msg == 'success') {
