--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -324,6 +324,10 @@
             <i class="far fa-circle mr-1 sb-icon-clr"></i>
             <span>Material History</span>
           </a>
+          <a class="collapse-item" href="/productionhistory">
+            <i class="far fa-circle mr-1 sb-icon-clr"></i>
+            <span>Production History</span>
+          </a>
           <!-- <h6 class="collapse-header">Logs:</h6>
           <a class="collapse-item" href="#">
             <i class="far fa-circle mr-1 sb-icon-clr"></i>
