--- a/views/productionhistory/productionhistory.ejs
+++ b/views/productionhistory/productionhistory.ejs
@@ -12,7 +12,7 @@
                 </div>
                 <div class="col-md-8">
                     <div class="row d-flex justify-content-end">
-                        <div class="col-9">
+                        <div class="col-7">
                             <div class="input-group">
                                 <input autocomplete="off" type="text" class="form-control bg-light small"
                                     placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2"
@@ -24,11 +24,22 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-3">
+                        <div class="col-1">
                             <div class="row d-flex justify-content-center">
                                 <button class="btn btn-outline-inventory ml-2" id="export-button">
                                     <i class="fas fa-download fa-sm"></i>
                                 </button>
+                            </div>
+                        </div>
+
+                        <div class="col-xl-4">
+                            <div class="input-group shadow">
+                                <button id="adjustDateBackward" class="btn btn-outline-inventory custom-br-left"><i
+                                        class="fas fa-caret-left"></i></button>
+                                <input id="dateRange" name="dateRange" type="text" class="form-control text-center daterange"
+                                    placeholder="Select Date Range" aria-describedby="basic-addon1" readonly>
+                                <button id="adjustDateForward" class="btn btn-outline-inventory custom-br-right"><i
+                                        class="fas fa-caret-right"></i></button>
                             </div>
                         </div>
                     </div>
@@ -42,10 +53,13 @@
                     <thead class="table-header">
                         <tr>
                             <th>ID</th>
+                            <th>Start Date</th>
+                            <th>End Date</th>
                             <th>Production ID</th>
                             <th>Quantity</th>
                             <th>Product</th>
                             <th>Supervisor</th>
+                            <th>Status</th>
                         </tr>
                     </thead>
                     <tbody>
